flaskapp_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment
  namespace: poc-6666
  labels:
    app: flaskapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      namespace: poc-6666
      labels:
        app: flaskapi
        service: crud-service
    spec:
      containers:
        - name: flaskapi
          image: crud_poc:11.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
